--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+dist: xenial
+os: linux
+
 language: node_js
 node_js:
   - "10"
@@ -14,7 +17,7 @@ script:
   - npm test
 deploy:
   - provider: script
-    skip_cleanup: true
+    cleanup: true
     script: chmod +x ./deploy.sh && ./deploy.sh
     on:
       branch: master
